Added text I/O system. Integrated query system with Java 8 streams.
* Reflected Query system changes in test code